<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreenActivity">


    <LinearLayout
        android:id="@+id/inputBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guessList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:hint="@string/contentDescription"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/changeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#E1DC8B3F"
            android:onClick="submitGuess"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/guessBtn"
            android:textSize="22sp"
            app:cornerRadius="2dp" />
    </LinearLayout>

    <Button
        android:id="@+id/changeBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E1DC8B3F"
        android:onClick="showRandomNumber"
        android:text="@string/hintbtn"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/guessList"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/changeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBox"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>